--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,10 @@ title: Jim Heisenberg's Blog
 author: Gong Yiming
 email: JimHeisenberg@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal blog of JimHeisenberg.
+  记录和分享自己的技术成长过程。
+  愿历尽千帆，仍不忘初心。
+  Follow your heart, whatever it takes.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
