update config readme and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,25 @@
+# project
 .vscode
+## from _config.yml
+.sass-cache/
+.jekyll-cache/
+gemfiles/
+Gemfile
+Gemfile.lock
+node_modules/
+vendor/bundle/
+vendor/cache/
+vendor/gems/
+vendor/ruby/
 
+# temp folder and file
 _site
 _drafts
 _drafts_temp
-.sass-cache
-.jekyll-cache
-.jekyll-metadata
-vendor
+# .sass-cache
+# .jekyll-cache
+# .jekyll-metadata
+# vendor
+
+# others
+## todo
