--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Jim Heisenberg's Blog
-author: Gong Yiming
+title: JimHeisenberg's Blog
+author: Mr. Gong (whose nickname is JimHeisenberg)
 email: JimHeisenberg@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal blog of JimHeisenberg.
